--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "crossfit-api",
-  "version": "1.0.2",
+  "name": "structure-api",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
